--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,160 @@
 /* You can add global styles to this file, and also import other style files */
+@import "../node_modules/ng-zorro-antd/ng-zorro-antd.min.css";
+/* Import one component's styles */
+
+* {
+    margin: 0px;
+    padding: 0px;
+    box-sizing: border-box;
+}
+
+.ant-steps-item-process>.ant-steps-item-container>.ant-steps-item-icon {
+    background: #d46132 !important;
+    border-color: #d46132 !important;
+}
+
+.ant-steps-item-finish .ant-steps-item-icon {
+    background-color: #fff;
+    border-color: #d46132;
+}
+
+.anticon,
+.anticon svg {
+    display: inline-block;
+    color: #d46132;
+}
+
+.ant-steps-item-finish>.ant-steps-item-container>.ant-steps-item-content>.ant-steps-item-title::after,
+.ant-steps-item-finish>.ant-steps-item-container>.ant-steps-item-tail::after {
+    background-color: #d46132;
+}
+
+.ant-btn:focus,
+.ant-btn:hover {
+    color: #d46132;
+    border-color: #d46132;
+}
+
+.ant-progress-inner:not(.ant-progress-circle-gradient) .ant-progress-circle-path {
+    stroke: #d46132;
+}
+
+.ant-btn-primary {
+    color: #fff;
+    border-color: #d46132;
+    background: #d46132;
+    text-shadow: 0 -1px 0 rgba(0, 0, 0, .12);
+    box-shadow: 0 2px 0 rgba(0, 0, 0, .045);
+}
+
+.ant-btn-primary:focus,
+.ant-btn-primary:hover {
+    border-color: #d46132;
+    background: #d46132;
+    color: #fff;
+}
+
+.ant-select-selector {
+    border: 1px solid #AEBBCE !important;
+    box-sizing: border-box;
+    border-radius: 6px !important;
+    height: 38px !important;
+    width: 100% !important;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    padding: 6px 0px;
+
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 20px;
+    letter-spacing: -0.01em;
+    color: #798CA5;
+    background: transparent !important;
+    position: fixed;
+}
+
+.ant-select {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    color: rgba(0, 0, 0, 0.85);
+    font-size: 14px;
+    font-variant: tabular-nums;
+    line-height: 1.5715;
+    list-style: none;
+    font-feature-settings: 'tnum';
+    position: relative;
+    display: inline-block;
+    cursor: pointer;
+
+    span svg {
+        display: inline-block;
+        color: #AEBBCE !important;
+    }
+}
+
+nz-date-picker {
+    border: 1px solid #AEBBCE;
+    box-sizing: border-box;
+    border-radius: 6px !important;
+    width: 100% !important;
+    align-items: center;
+    height: 40px;
+    
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 20px;
+    letter-spacing: -0.01em;
+    color: #798CA5;
+  }
+
+.ant-select-focused:not(.ant-select-disabled).ant-select:not(.ant-select-customize-input) .ant-select-selector {
+    border-color: #FF6010 !important;
+    box-shadow: 0 0 0 2px rgba(255, 96, 16, 0.2);
+    border-right-width: 1px;
+    outline: 0;
+}
+
+.disabled-select {
+    background: #e4f2fe;
+    color: #798CA5 !important;
+    border: 0px solid #AEBBCE !important;
+    border-radius: 6px !important;
+}
+
+.disable-input {
+    background: #e4f2fe;
+    color: #798CA5 !important;
+    border: 1px solid #BDC8D9 !important;
+    border-radius: 6px !important;
+}
+
+
+app-register-pqr {
+    width: 90%;
+}
+
+// scroll
+::-webkit-scrollbar {
+    width: 0px;
+    height: 0px;
+    display: block;
+    background-color: #ffffff;
+}
+
+::-webkit-scrollbar-track {
+    border-radius: 5px;
+    background-color: #ffffff;
+}
+
+::-webkit-scrollbar-thumb {
+    border-radius: 100rem;
+    background-color: #c1c1c1;
+}
+
+.ant-switch-checked {
+    background: #D46132 !important;
+}
