--- a/src/app/pages/components/register/register-pqr.component.html
+++ b/src/app/pages/components/register/register-pqr.component.html
@@ -79,7 +79,8 @@
                 <label>Area responsable<span>*</span>:</label>
                 <nz-form-item>
                     <nz-form-control nz-col [nzSpan]="23" nzErrorTip="¡Por favor, seleccione un area responsable!">
-                        <nz-select nzShowSearch nzAllowClear formControlName="fkAreaResponsable">
+                        <nz-select nzShowSearch nzAllowClear formControlName="fkAreaResponsable"
+                            (ngModelChange)="changeAreResponsable($event)">
                             <nz-option [nzDisabled]="true" [nzValue]="undefined"
                                 nzLabel="Seleccione una area"></nz-option>
                             <nz-option [nzValue]="item" [nzLabel]="item.nombre"
@@ -89,7 +90,8 @@
                 </nz-form-item>
             </div>
 
-            <div nz-col [nzSpan]="24" [nzSm]="6" *ngIf="formCotizaciones.value.fkAreaResponsable.codigo == 'OPE'">
+            <div nz-col [nzSpan]="24" [nzSm]="6"
+                *ngIf="formCotizaciones.value.fkAreaResponsable ? formCotizaciones.value.fkAreaResponsable.codigo == 'OPE' : false">
                 <label>Conductor<span>*</span>:</label>
                 <nz-form-item>
                     <nz-form-control nz-col [nzSpan]="23" nzErrorTip="¡Por favor, seleccione un conductor!">
@@ -101,7 +103,8 @@
                 </nz-form-item>
             </div>
 
-            <div nz-col [nzSpan]="24" [nzSm]="6" *ngIf="formCotizaciones.value.fkAreaResponsable.codigo == 'COO'">
+            <div nz-col [nzSpan]="24" [nzSm]="6"
+                *ngIf="formCotizaciones.value.fkAreaResponsable ? formCotizaciones.value.fkAreaResponsable.codigo == 'COO' : false">
                 <label>Empleado<span>*</span>:</label>
                 <nz-form-item>
                     <nz-form-control nz-col [nzSpan]="23" nzErrorTip="¡Por favor, seleccione un empleado!">
@@ -116,7 +119,8 @@
                 </nz-form-item>
             </div>
 
-            <div nz-col [nzSpan]="24" [nzSm]="6" *ngIf="formCotizaciones.value.fkAreaResponsable.codigo == 'OTR'">
+            <div nz-col [nzSpan]="24" [nzSm]="6"
+                *ngIf="formCotizaciones.value.fkAreaResponsable ? formCotizaciones.value.fkAreaResponsable.codigo == 'OTR' : false">
                 <label>¿Cual?<span>*</span>:</label>
                 <nz-form-item>
                     <nz-form-control nz-col [nzSpan]="23" nzErrorTip="¡Por favor, ingrese la observacion!">
@@ -224,68 +228,69 @@
                 <b>{{ currentFileSize ? currentFileSize : 'para subir o arrastra y suelta un JPG,PNG y JPEG' }}</b>
             </div>
 
-
             <input class="file-input" id="fileInput" type="file" (change)="onFileSelected($event)">
         </div>
     </ng-container>
     <ng-container *ngIf="current == 3">
-        <ng-container *ngIf="estadoPQR; else bloqueCard">
-            <div class="card__success">
-                <div class="notifications-container">
-                    <div class="success">
-                        <div class="flex">
-                            <div class="flex-shrink-0">
+        <nz-spin nzTip="Cargando..." *ngIf="!enviado">
+            <ng-container *ngIf="estadoPQR; else bloqueCard">
+                <div class="card__success">
+                    <div class="notifications-container">
+                        <div class="success">
+                            <div class="flex">
+                                <div class="flex-shrink-0">
 
-                                <svg class="succes-svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"
-                                    fill="currentColor" aria-hidden="true">
-                                    <path fill-rule="evenodd"
-                                        d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z"
-                                        clip-rule="evenodd"></path>
-                                </svg>
-                            </div>
-                            <div class="success-prompt-wrap">
-                                <p class="success-prompt-heading">Proceso realizado con éxito
-                                </p>
-                                <div class="success-prompt-prompt">
-                                    <p>Hemos recibido tu solicitud de PQR. Queremos informarte que tu
-                                        solicitud ha sido registrada y será procesada con la máxima prioridad.
-                                        Agradecemos tu confianza y paciencia durante este proceso.</p>
+                                    <svg class="succes-svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"
+                                        fill="currentColor" aria-hidden="true">
+                                        <path fill-rule="evenodd"
+                                            d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z"
+                                            clip-rule="evenodd"></path>
+                                    </svg>
+                                </div>
+                                <div class="success-prompt-wrap">
+                                    <p class="success-prompt-heading">Proceso realizado con éxito
+                                    </p>
+                                    <div class="success-prompt-prompt">
+                                        <p>Hemos recibido tu solicitud de PQR. Queremos informarte que tu
+                                            solicitud ha sido registrada y será procesada con la máxima prioridad.
+                                            Agradecemos tu confianza y paciencia durante este proceso.</p>
+                                    </div>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
-            </div>
-        </ng-container>
+            </ng-container>
 
-        <ng-template #bloqueCard>
-            <div class="card__success">
-                <div class="notifications-container">
-                    <div class="alert">
-                        <div class="flex">
-                            <div class="flex-shrink-0">
-                                <svg aria-hidden="true" fill="currentColor" viewBox="0 0 20 20"
-                                    xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 alert-svg">
-                                    <path clip-rule="evenodd"
-                                        d="M8.257 3.099c.765-1.36 2.722-1.36 3.486 0l5.58 9.92c.75 1.334-.213 2.98-1.742 2.98H4.42c-1.53 0-2.493-1.646-1.743-2.98l5.58-9.92zM11 13a1 1 0 11-2 0 1 1 0 012 0zm-1-8a1 1 0 00-1 1v3a1 1 0 002 0V6a1 1 0 00-1-1z"
-                                        fill-rule="evenodd"></path>
-                                </svg>
-                            </div>
-                            <div class="alert-prompt-wrap">
-                                <p>Lamentamos informarte que no hemos podido registrar PQR. Nuestro equipo de soporte
-                                    revisará la situación y se pondrá
-                                    en contacto contigo para obtener más detalles y asistencia. Agradecemos tu
-                                    comprensión y estamos comprometidos a resolver este inconveniente lo antes posible.
-                                </p>
+            <ng-template #bloqueCard>
+                <div class="card__success">
+                    <div class="notifications-container">
+                        <div class="alert">
+                            <div class="flex">
+                                <div class="flex-shrink-0">
+                                    <svg aria-hidden="true" fill="currentColor" viewBox="0 0 20 20"
+                                        xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 alert-svg">
+                                        <path clip-rule="evenodd"
+                                            d="M8.257 3.099c.765-1.36 2.722-1.36 3.486 0l5.58 9.92c.75 1.334-.213 2.98-1.742 2.98H4.42c-1.53 0-2.493-1.646-1.743-2.98l5.58-9.92zM11 13a1 1 0 11-2 0 1 1 0 012 0zm-1-8a1 1 0 00-1 1v3a1 1 0 002 0V6a1 1 0 00-1-1z"
+                                            fill-rule="evenodd"></path>
+                                    </svg>
+                                </div>
+                                <div class="alert-prompt-wrap">
+                                    <p>Lamentamos informarte que no hemos podido registrar PQR. Nuestro equipo de
+                                        soporte
+                                        revisará la situación y se pondrá
+                                        en contacto contigo para obtener más detalles y asistencia. Agradecemos tu
+                                        comprensión y estamos comprometidos a resolver este inconveniente lo antes
+                                        posible.
+                                    </p>
 
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
-            </div>
-        </ng-template>
-
-
+            </ng-template>
+        </nz-spin>
     </ng-container>
 </form>
 
@@ -298,7 +303,7 @@
         <span>Siguiente</span>
     </button>
     <button nz-button nzType="primary" (click)="done()" [nzLoading]="processing" *ngIf="current === 2 && !enviado">
-        <span>Enviar</span>
+        <span>Registrar</span>
     </button>
     <button nz-button nzType="primary" (click)="nuevaPQR()" *ngIf="enviado">
         <span>Registrar una nueva solictud</span>
