Cambio en el formulario al buscar el cliente de un select a el nit

--- a/src/app/pages/components/register/register-pqr.component.html
+++ b/src/app/pages/components/register/register-pqr.component.html
@@ -134,13 +134,8 @@
                 <label>Cliente<span>*</span>:</label>
                 <nz-form-item>
                     <nz-form-control nz-col [nzSpan]="23" nzErrorTip="¡Por favor, seleccione un cliente">
-                        <nz-select nzShowSearch nzAllowClear formControlName="fkCliente"
-                            (ngModelChange)="changeClient()">
-                            <nz-option [nzDisabled]="true" [nzValue]="undefined"
-                                nzLabel="Seleccione un cliente"></nz-option>
-                            <nz-option [nzValue]="item.id" [nzLabel]="item.razonsocial"
-                                *ngFor="let item of listCentrosCostos"></nz-option>
-                        </nz-select>
+                        <input nz-input class="input-field" formControlName="fkCliente"
+                        placeholder="Ingrese el nit del cliente" (blur)="changeClient()"/>
                     </nz-form-control>
                 </nz-form-item>
             </div>
