--- a/src/app/pages/components/register/register-pqr.component.html
+++ b/src/app/pages/components/register/register-pqr.component.html
@@ -79,7 +79,8 @@
                 <label>Area responsable<span>*</span>:</label>
                 <nz-form-item>
                     <nz-form-control nz-col [nzSpan]="23" nzErrorTip="¡Por favor, seleccione un area responsable!">
-                        <nz-select nzShowSearch nzAllowClear formControlName="fkAreaResponsable" nzPlaceHolder="Seleccione un area responsable"
+                        <nz-select nzShowSearch nzAllowClear formControlName="fkAreaResponsable"
+                            nzPlaceHolder="Seleccione un area responsable"
                             (ngModelChange)="changeAreResponsable($event)">
                             <nz-option [nzDisabled]="true" [nzValue]="undefined"
                                 nzLabel="Seleccione una area"></nz-option>
@@ -95,9 +96,12 @@
                 <label>Conductor<span>*</span>:</label>
                 <nz-form-item>
                     <nz-form-control nz-col [nzSpan]="23" nzErrorTip="¡Por favor, seleccione un conductor!">
-                        <nz-select nzShowSearch nzAllowClear formControlName="fkConductor">
+                        <nz-select nzShowSearch nzAllowClear formControlName="fkConductor" nzPlaceHolder="Seleccione un conductor"> 
                             <nz-option [nzDisabled]="true" [nzValue]="undefined"
                                 nzLabel="Seleccione un conductor"></nz-option>
+                            <nz-option [nzValue]="item.id"
+                                [nzLabel]="((item.primer_nombre + ' '+item.primer_apellido) | capitalize)"
+                                *ngFor="let item of listConductor"></nz-option>
                         </nz-select>
                     </nz-form-control>
                 </nz-form-item>
@@ -108,7 +112,7 @@
                 <label>Empleado<span>*</span>:</label>
                 <nz-form-item>
                     <nz-form-control nz-col [nzSpan]="23" nzErrorTip="¡Por favor, seleccione un empleado!">
-                        <nz-select nzShowSearch nzAllowClear formControlName="fkEmpleado">
+                        <nz-select nzShowSearch nzAllowClear formControlName="fkEmpleado" nzPlaceHolder="Seleccione un empleado">
                             <nz-option [nzDisabled]="true" [nzValue]="undefined"
                                 nzLabel="Seleccione un empleado"></nz-option>
                             <nz-option [nzValue]="item.id"
@@ -135,7 +139,7 @@
                 <nz-form-item>
                     <nz-form-control nz-col [nzSpan]="23" nzErrorTip="¡Por favor, ingrese el nit del cliente!">
                         <input nz-input class="input-field" formControlName="fkCliente"
-                        placeholder="Ingrese el nit del cliente" (blur)="changeClient()"/>
+                            placeholder="Ingrese el nit del cliente" (blur)="changeClient()" />
                     </nz-form-control>
                 </nz-form-item>
             </div>
@@ -144,7 +148,8 @@
                 <label>Tipo solicitud<span>*</span>:</label>
                 <nz-form-item>
                     <nz-form-control nz-col [nzSpan]="23" nzErrorTip="¡Por favor, seleccione un tipo de solicitud!">
-                        <nz-select nzShowSearch nzAllowClear formControlName="fkTipoSolicitud" nzPlaceHolder="Seleccione un tipo de solicitud">
+                        <nz-select nzShowSearch nzAllowClear formControlName="fkTipoSolicitud"
+                            nzPlaceHolder="Seleccione un tipo de solicitud">
                             <nz-option [nzDisabled]="true" [nzValue]="undefined"
                                 nzLabel="Seleccione un tipo"></nz-option>
                             <nz-option [nzValue]="item.id" [nzLabel]="item.nombre"
@@ -158,7 +163,8 @@
                 <label>Prioridad <span>*</span>:</label>
                 <nz-form-item>
                     <nz-form-control nz-col [nzSpan]="23" nzErrorTip="¡Por favor, seleccione una prioridad!">
-                        <nz-select nzShowSearch nzAllowClear formControlName="fkCriticidad" nzPlaceHolder="Seleccione una prioridad">
+                        <nz-select nzShowSearch nzAllowClear formControlName="fkCriticidad"
+                            nzPlaceHolder="Seleccione una prioridad">
                             <nz-option [nzDisabled]="true" [nzValue]="undefined"
                                 nzLabel="Seleccione una prioridad"></nz-option>
                             <nz-option [nzValue]="item.id" [nzLabel]="item.nombre"
@@ -172,7 +178,8 @@
                 <label>Causa<span>*</span>:</label>
                 <nz-form-item>
                     <nz-form-control nz-col [nzSpan]="23" nzErrorTip="¡Por favor, seleccione una causa!">
-                        <nz-select nzShowSearch nzAllowClear formControlName="fkCausa" nzPlaceHolder="Seleccione una causa">
+                        <nz-select nzShowSearch nzAllowClear formControlName="fkCausa"
+                            nzPlaceHolder="Seleccione una causa">
                             <nz-option [nzDisabled]="true" [nzValue]="undefined"
                                 nzLabel="Seleccione una causa"></nz-option>
                             <nz-option [nzValue]="item.id" [nzLabel]="item.nombre"
@@ -186,7 +193,8 @@
                 <label>Tipo de servicio <span>*</span>:</label>
                 <nz-form-item>
                     <nz-form-control nz-col [nzSpan]="23" nzErrorTip="¡Por favor, seleccione un tipo de servicio!">
-                        <nz-select nzShowSearch nzAllowClear formControlName="fkTipoServicio" nzPlaceHolder="Seleccione un tipo de servicio">
+                        <nz-select nzShowSearch nzAllowClear formControlName="fkTipoServicio"
+                            nzPlaceHolder="Seleccione un tipo de servicio">
                             <nz-option [nzDisabled]="true" [nzValue]="undefined"
                                 nzLabel="Seleccione una tipo"></nz-option>
                             <nz-option [nzValue]="item.id" [nzLabel]="item.nombre"
