--- a/src/app/pages/components/register/register-pqr.component.html
+++ b/src/app/pages/components/register/register-pqr.component.html
@@ -75,7 +75,7 @@
             </div>
 
             <!-- SECTION 3 -->
-            <div nz-col [nzSpan]="24" [nzSm]="6">
+            <!-- <div nz-col [nzSpan]="24" [nzSm]="6">
                 <label>Area responsable<span>*</span>:</label>
                 <nz-form-item>
                     <nz-form-control nz-col [nzSpan]="23" nzErrorTip="¡Por favor, seleccione un area responsable!">
@@ -133,7 +133,7 @@
                     </nz-form-control>
                 </nz-form-item>
             </div>
-
+ -->
             <div nz-col [nzSpan]="24" [nzSm]="6">
                 <label>Cliente<span>*</span>:</label>
                 <nz-form-item>
