--- a/src/app/pages/principal.component.html
+++ b/src/app/pages/principal.component.html
@@ -1,4 +1,3 @@
-<app-navbar (navbar)="actions($event)"></app-navbar>
 <section class="cont__fondo">
     <section class="cont__fondo-consult" *ngIf="eventoTabs == 'CONSUL'">
         <app-consult></app-consult>
@@ -7,17 +6,13 @@
         <app-register-pqr (setp)="recibirEvento($event)"></app-register-pqr>
     </section>
     <section class="cont__fondo-portada"
-        [ngStyle]="{width : eventoTabs == 'CONSUL' ? '60%' : eventoTabs == 'REGIST' ? '0%' : '0%'}">
-        <img src="../../assets/img/fondo/pqr.png" alt="" *ngIf="eventoTabs == 'CONSUL'">
-        <img class="fondo" src="../../assets/img/fondo/wave-haikei(1).svg" alt="">
+        [ngStyle]="{width : eventoTabs == 'CONSUL' ? '55%' : eventoTabs == 'REGIST' ? '55%' : '55%'}">
+
+        <app-navbar (navbar)="actions($event)"></app-navbar>
+
+
+        <img src="../../assets/img/fondo/Frame 15.png" alt="">
+
+        <span>Business and Transport Travel Management Company</span>
     </section>
 </section>
-
-<!-- <picture class="icono">
-    <a href="https://wa.link/eg18ht" target="_blank">
-        <img nzTooltipTitle="Contactanos" [nzTooltipPlacement]="['topLeft', 'leftTop']" nz-tooltip
-            src="../../assets/icons/whatsapp.png" alt="">
-    </a>
-</picture> -->
-
-<!-- <cui-support-chat></cui-support-chat> -->
