--- a/src/app/pages/principal.component.scss
+++ b/src/app/pages/principal.component.scss
@@ -104,15 +104,96 @@
   }
 }
 
+@media (max-width: 768px) {
+  .cont__fondo-consult {
+    width: 100%;
+    border-radius: 0px;
+  }
+
+  .cont__fondo-portada {
+    display: none;
+    img {
+      display: block;
+    }
+  }
+}
+
+// NAV
+@mixin flex($justify: space-between, $align: center) {
+  display: flex;
+  justify-content: $justify;
+  align-items: $align;
+}
+
+.cont__header {
+  width: 100%;
+  height: 100px;
+  @include flex();
+  padding: 0px 60px;
+}
+
+.cont__header-picture {
+  width: 33.3%;
+
+  .cont__picture-img {
+    width: 250px;
+    height: 170px;
+  }
+}
+
+.cont__header-nav {
+  width: 100%;
+
+  .cont__nav-ul {
+    width: 100%;
+    @include flex(flex-end, center);
+    gap: 18px;
+    list-style: none;
+    color: #d46132;
+
+    .cont__nav-li {
+      font-family: "Lato", sans-serif;
+      font-size: 14px;
+      cursor: pointer;
+      color: #c83b00;
+    }
+  }
+}
+
+.active-tabs {
+  width: 133px;
+  height: 40px;
+  border-radius: 10px;
+  border: 1px solid #c83b00;
+  font-weight: 700;
+  display: grid;
+  place-items: center;
+}
+
+.cont__header-section {
+  width: 33.3%;
+  @include flex(flex-end, center);
+
+  .cont__section-button {
+    font-family: "Lato", sans-serif;
+    font-weight: 700;
+    font-size: 14px;
+    text-transform: uppercase;
+    border: none;
+    background: transparent;
+    color: #c83b00;
+  }
+}
+
 // @media (min-width: 768px) {
-//   .cont__consulta {
-//     width: 40%;
+//   .cont__header-nav {
+//     .cont__nav-ul {
+//       color: white;
+//     }
 //   }
 
-//   .cont__fondo-portada {
-//     width: 60%;
-//     img {
-//       display: block;
-//     }
+//   .active-tabs {
+//     color: white;
+//     border-bottom: 2px solid white;
 //   }
 // }
