--- a/src/app/pages/components/register/register-pqr.component.scss
+++ b/src/app/pages/components/register/register-pqr.component.scss
@@ -1,6 +1,6 @@
 nav {
   width: 100%;
-  height: 90px;
+  height: auto;
 
   ul {
     width: 100%;
@@ -8,6 +8,7 @@ nav {
     display: flex;
     justify-content: center;
     align-items: center;
+    overflow: scroll;
     gap: 32px;
     li {
       display: flex;
@@ -60,10 +61,9 @@ nav {
 }
 
 form {
-  padding: 20px 0px 0px;
+  padding: 20px 0px;
   display: flex;
   flex-direction: column;
-  // align-items: center;
   gap: 22px;
 }
 
@@ -175,6 +175,7 @@ textarea:focus {
 
   b {
     color: #bdbdbd;
+    text-align: center;
   }
 }
 
@@ -315,5 +316,14 @@ footer {
     font-weight: 600;
     line-height: 24px;
     text-align: center;
+  }
+}
+
+// RESPONSIVE
+@media (max-width: 768px) {
+  nav {
+    ul {
+      justify-content: start;
+    }
   }
 }
