--- a/src/app/pages/components/consult/consult.component.html
+++ b/src/app/pages/components/consult/consult.component.html
@@ -1,13 +1,12 @@
 <section class="cont__consulta">
-    <h2 class="cont__consulta-h2">¡Bienvenido al Módulo de Consulta de PQR!</h2>
+    <h2 class="cont__consulta-h2">¡Bienvenido al Módulo de creación y consulta de PQR!</h2>
     <p class="cont__consulta-p">
-        Estamos emocionados de presentarte nuestra herramienta avanzada de consulta, diseñada para hacer que tu
-        experiencia de búsqueda sea más inteligente y eficiente que nunca.
+        ¡Te presentamos nuestra nueva herramienta de consulta y registro! Diseñada para hacer tu búsqueda más inteligente y eficiente. Mejoramos constantemente para ofrecerte soluciones rápidas en transporte.
     </p>
     <div class="cont__consulta-button">
         <div class="form__input">
-            <label for="">Ingresar código</label>
-            <input [type]="!viewPassword ? 'text' : 'password'" [(ngModel)]="pqr" placeholder="Ingrese N° de PQR">
+            <label for="">Ingresar N° de la PQR</label>
+            <input [type]="!viewPassword ? 'text' : 'password'" [(ngModel)]="pqr" placeholder="Ingrese N° de la PQR">
             <div class="icon" style="cursor: pointer;" (click)="viewPassword = !viewPassword">
                 <img src="../../../../assets/icons/password.svg" alt="">
             </div>
