Cambio de la imagen de la portada y mensajes

--- a/src/app/pages/components/consult/consult.component.html
+++ b/src/app/pages/components/consult/consult.component.html
@@ -1,7 +1,7 @@
 <section class="cont__consulta">
-    <h2 class="cont__consulta-h2">¡Bienvenido al Módulo de creación y consulta de PQR!</h2>
+    <h2 class="cont__consulta-h2">¡Bienvenido al módulo de registro y consulta de PQR!</h2>
     <p class="cont__consulta-p">
-        ¡Te presentamos nuestra nueva herramienta de consulta y registro! Diseñada para hacer tu búsqueda más inteligente y eficiente. Mejoramos constantemente para ofrecerte soluciones rápidas en transporte.
+        ¡Tu opinión cuenta! Valoramos tus solicitudes, quejas, reclamos y sugerencias. Nos esforzamos en mejorar la experiencia del transporte. ¡Gracias por tu confianza en nuestro compromiso!
     </p>
     <div class="cont__consulta-button">
         <div class="form__input">
