--- a/src/app/pages/principal.component.html
+++ b/src/app/pages/principal.component.html
@@ -41,7 +41,7 @@
         <app-navbar (navbar)="actions($event)"></app-navbar>
 
 
-        <img src="../../assets/img/fondo/Frame 15.png" alt="">
+        <img src="../../assets/img/fondo/Group 1000004174.png" alt="">
 
         <span>Business and Transport Travel Management Company</span>
     </section>
