--- a/src/app/pages/components/register/register-pqr.component.html
+++ b/src/app/pages/components/register/register-pqr.component.html
@@ -52,13 +52,12 @@
                         *ngFor="let item of medioNotificacion"></nz-option>
                 </nz-select>
             </div>
-            
+
             <div nz-col [nzSpan]="24" [nzSm]="8">
                 <label>Sede</label>
                 <nz-select nzShowSearch="true" formControlName="fkSede" nzPlaceHolder="Seleccione una sede">
                     <nz-option [nzDisabled]="true" [nzValue]="undefined" nzLabel="Seleccione una sede"></nz-option>
-                    <nz-option [nzValue]="item.id" [nzLabel]="item.nombre"
-                        *ngFor="let item of entidadList"></nz-option>
+                    <nz-option [nzValue]="item.id" [nzLabel]="item.nombre" *ngFor="let item of entidadList"></nz-option>
                 </nz-select>
             </div>
 
@@ -133,8 +132,25 @@
 
         <div class="contenedor__evidencia">
             <img draggable="false" src="../../../../assets/icons/mdi_image-add-outline.svg" height="50%" class="mx-2">
-            <b>{{ currentFileSize ? (currentFileName + " "+ currentFileSize) : 'Presiona aquí para subir o arrastra y suelta un JPG,PNG y JPEG' }}</b>
+            <b>{{ currentFileSize ? (currentFileName + " "+ currentFileSize) : 'Presiona aquí para subir o arrastra y
+                suelta un JPG, PNG, JPEG y PDF' }}</b>
             <input class="file-input" id="fileInput" type="file" (change)="onFileSelected($event)">
+
+        </div>
+
+        <div class="contenedor__evidencias-list">
+            <ul>
+                <li *ngFor="let item of listFileView">
+                    {{ item.name }}
+                    <svg (click)="eliminarFileList(item)" xmlns="http://www.w3.org/2000/svg" width="16" height="16"
+                        fill="red" class="bi bi-trash" viewBox="0 0 16 16">
+                        <path
+                            d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5m2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5m3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0z" />
+                        <path
+                            d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1zM4.118 4 4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4zM2.5 3h11V2h-11z" />
+                    </svg>
+                </li>
+            </ul>
         </div>
 
         <footer>
