--- a/src/app/pages/components/register/register-pqr.component.scss
+++ b/src/app/pages/components/register/register-pqr.component.scss
@@ -162,7 +162,7 @@ textarea:focus {
 
 .contenedor__evidencia {
   width: 100%;
-  height: 220px;
+  height: 200px;
   border-radius: 16px;
   background-color: #f9fafb;
   position: relative;
@@ -178,7 +178,36 @@ textarea:focus {
     text-align: center;
   }
 }
+.contenedor__evidencias-list {
+  display: flex;
+  flex-direction: column;
+  gap: 6px;
+  margin-bottom: 12px;
+  width: 100%;
+  position: relative;
+  height: 100px;
+  overflow: scroll;
+  ul {
+    list-style: none;
+    margin-top: 12px;
+    li {
+      font-size: 13px;
+      font-weight: 500;
+      line-height: 24px;
+      letter-spacing: -0.02em;
+      text-align: left;
+      padding: 4px;
 
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+
+      &:hover {
+        background-color: rgba(128, 128, 128, 0.181);
+      }
+    }
+  }
+}
 .card__success {
   width: 100%;
   height: 140px;
