Configuración de notificación a los correos y quite de evidencias al generar la PQR

--- a/src/app/pages/components/register/register-pqr.component.html
+++ b/src/app/pages/components/register/register-pqr.component.html
@@ -154,7 +154,7 @@
         </div>
 
         <footer>
-            <button class="cont__button-button" (click)="done()">Registrar PQR</button>
+            <button class="cont__button-button" (click)="done()" [disabled]="enviado">Registrar PQR</button>
             <img src="../../../../assets/img/fondo/Group 1000004173.png" alt="">
         </footer>
     </ng-container>
