--- a/src/app/pages/components/register/register-pqr.component.scss
+++ b/src/app/pages/components/register/register-pqr.component.scss
@@ -345,7 +345,17 @@ footer {
     font-weight: 600;
     line-height: 24px;
     text-align: center;
+
+    &:disabled {
+      background-color: gray;
+      box-shadow: 0px 8px 12px 0px rgb(128, 128, 128);
+      cursor: not-allowed;
+    }
   }
+}
+
+button:disabled {
+  background-color: gray;
 }
 
 // RESPONSIVE
