Cambios de imagenes de la pantalla de consultar PQR

--- a/src/app/pages/components/consult/consult.component.html
+++ b/src/app/pages/components/consult/consult.component.html
@@ -16,7 +16,7 @@
 
         <footer>
             <img class="img__logo" src="../../../../assets/img/fondo/logo.png" alt="">
-            <img class="img__footer" src="../../../../assets/img/fondo/logo-footer.png" alt="">
+            <!-- <img class="img__footer" src="../../../../assets/img/fondo/logo-footer.png" alt=""> -->
         </footer>
     </div>
 </section>
