--- a/src/app/pages/principal.component.html
+++ b/src/app/pages/principal.component.html
@@ -43,6 +43,6 @@
 
         <img src="../../assets/img/fondo/Group 1000004174.png" alt="">
 
-        <span>Business and Transport Travel Management Company</span>
+        <!-- <span>Business and Transport Travel Management Company</span> -->
     </section>
 </section>
